--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -4,15 +4,19 @@
 .navbar {
   background-color: rgb(255, 255, 255);
   display: flex;
-  height: 90px;
+  height: 70px;
   align-items: center;
   box-shadow: 0 4px 4px #ffe8e8;
+  position: relative;
+  background-color: #FFDEE9;
+background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+
   
   
 }
 
 .navbar_left {
-  flex: 1.5;
+  flex: 1;
   
 }
 
@@ -29,7 +33,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 10px;
+  gap: 30px;
   margin-right: 20px;
 }
 .search_input {
