--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -4,12 +4,14 @@
   right: 20px;
   top: 80px;
   z-index: 999;
-  background-color: white;
+  background-color: rgb(230, 230, 230);
   padding: 20px;
+  border-radius: 14px;
   -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
 }
-.title {
+
+title {
   margin-bottom: 30px;
   color: gray;
   font-weight: 400;
@@ -57,7 +59,7 @@
   margin-bottom: 20px;
 }
 
-button {
+.button {
   width: 250px;
   padding: 10px;
   display: flex;
