--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,23 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 
 .navbar {
-  background-color: rgb(255, 255, 255);
   display: flex;
   height: 70px;
   align-items: center;
-  box-shadow: 0 4px 4px #ffe8e8;
   position: relative;
-  background-color: #FFDEE9;
-background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
-
-  
-  
+  background-color: #b0b0b0;
+  /* background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%); */
 }
 
 .navbar_left {
   flex: 1;
-  
 }
 
 .navbar_center {
@@ -43,12 +36,12 @@ background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
 .search_input::placeholder {
   text-align: center;
 }
-.navbarlogo{
+.navbarlogo {
   padding: 100px;
   margin-left: -15%;
 }
-.fontlogo{
-  font-family: 'Great Vibes', cursive;
+.fontlogo {
+  font-family: "Great Vibes", cursive;
   flex-direction: column;
   font-size: 40px;
   padding: 5px;
