--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -2,15 +2,16 @@
 
 .navbar {
   display: flex;
-  height: 70px;
+  height: 49px;
   align-items: center;
   position: relative;
-  background-color: #b0b0b0;
-  /* background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%); */
+  background-color:#555454;
+
 }
 
 .navbar_left {
   flex: 1;
+  
 }
 
 .navbar_center {
