--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   justify-content: center;
   display: flex;
-  background-color: rgb(255, 255, 255);
+  background-color: #f09a06;
   height: 40vh;
   flex-direction: column;
   padding: 5px;
