--- a/src/styles/orders.module.css
+++ b/src/styles/orders.module.css
@@ -1,7 +1,7 @@
 .orders {
     height: auto;
     padding: 8px;
-    background-color: #d1d1d1;
+    background-color: #f09a06;
     border-radius: 8px;
     margin-top: 10px;
 }
